Revise README with improved project details and features
Updated README to enhance project description and features.